test/expected/k_explain_i.out
struct S; explain int S
             ^
14: error: "S": previously declared as type: typedef struct S S
